# PseudoLang

./: .gitignore  CMakeLists.txt  PseudoLang.cpp  README.md  input.txt  launch.vs.json
src/: CMakeLists.txt
src/AST/: CMakeLists.txt  Expr.cpp  Expr.h
src/Parser/: ASTGen.cpp  ASTGen.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h
src/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h
src/Utils/: CMakeLists.txt  LangError.cpp  LangError.h  Object.cpp  Object.h  Value.cpp  Value.h
src/VM/: CMakeLists.txt  Chunk.cpp  Chunk.h  VM.cpp  VM.h
